// Vitest Snapshot v1

exports[`entryTypes > rendering {
  type: 'quote',
  entries: [Array],
  by: 'Anon',
  from: 'Archive of Lost Chats'
} matches snapshot 1`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "Look, don't quote me on this, but"
      </p>
    </blockquote>
    <figcaption>
      — 
      Anon
      ,
       
      <cite>
        Archive of Lost Chats
      </cite>
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], by: 'Anon' } matches snapshot 1`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "e"
      </p>
    </blockquote>
    <figcaption>
      — 
      Anon
      
      <cite />
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], from: 'place' } matches snapshot 1`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "e"
      </p>
    </blockquote>
    <figcaption>
      — 
      
      
      <cite>
        place
      </cite>
    </figcaption>
  </figure>
</div>
`;

exports[`entryTypes > rendering { type: 'quote', entries: [Array], from: 'place' } matches snapshot 2`] = `
<div>
  <figure>
    <blockquote>
      <p>
        "e
      </p>
      <p>
        i
      </p>
      <p>
        o"
      </p>
    </blockquote>
    <figcaption>
      — 
      
      
      <cite>
        place
      </cite>
    </figcaption>
  </figure>
</div>
`;
